--- a/style.css
+++ b/style.css
@@ -64,3 +64,8 @@ body{
 #forms{
     margin-left: 12%;
 }
+@media screen and (max-width: 575px) {
+    .products{
+        flex-direction: column;
+    }
+}
