--- a/style.css
+++ b/style.css
@@ -65,7 +65,8 @@ body{
     margin-left: 12%;
 }
 @media screen and (max-width: 575px) {
-    .products{
+    .products .services{
         flex-direction: column;
+        gap: 1rem;
     }
 }
