--- a/style.css
+++ b/style.css
@@ -65,7 +65,16 @@ body{
     margin-left: 12%;
 }
 @media screen and (max-width: 575px) {
-    .products .services{
+    .products{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    .services{
+        flex-direction: column;
+        gap: 1rem;
+        font-size: 15px;
+    }
+    .hero-section{
         flex-direction: column;
         gap: 1rem;
     }
